k8s/delete-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservicio-eliminar-deployment
  labels:
    app: eliminar-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eliminar-app
  template:
    metadata:
      labels:
        app: eliminar-app
    spec:
      containers:
      - name: microservicio-eliminar-container
        image: blandoncj/k8s-test-delete:latest 
        ports:
        - containerPort: 8080
