k8s/mariadb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.9 
        ports:
        - containerPort: 3306
          name: db-port
        volumeMounts:
        - name: mariadb-persistent-storage 
          mountPath: /var/lib/mysql 
      volumes:
      - name: mariadb-persistent-storage 
        persistentVolumeClaim:
          claimName: mariadb-pvc
