k8s/read-deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservicio-leer-deployment
  labels:
    app: leer-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leer-app
  template:
    metadata:
      labels:
        app: leer-app
    spec:
      containers:
      - name: microservicio-leer-container
        image: blandoncj/k8s-test-read:latest 
        ports:
        - containerPort: 8080
