k8s/update-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservicio-actualizar-deployment
  labels:
    app: actualizar-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actualizar-app
  template:
    metadata:
      labels:
        app: actualizar-app
    spec:
      containers:
      - name: microservicio-actualizar-container
        image: blandoncj/k8s-test-update:latest 
        ports:
        - containerPort: 8080
