k8s/create-service.yml
apiVersion: v1
kind: Service
metadata:
  name: crear-service
spec:
  type: ClusterIP
  selector:
    app: crear-app
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 8080
