k8s/delete-service.yml
apiVersion: v1
kind: Service
metadata:
  name: eliminar-service
spec:
  type: ClusterIP
  selector:
    app: eliminar-app
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 8080
