k8s/read-service.yml
apiVersion: v1
kind: Service
metadata:
  name: leer-service
  labels:
    app: leer-app 
spec:
  type: ClusterIP 
  selector:
    app: leer-app 
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 8080
