k8s/update-service.yml
apiVersion: v1
kind: Service
metadata:
  name: actualizar-service
spec:
  type: ClusterIP
  selector:
    app: actualizar-app
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 8080
